--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
         "B Spesial 2": "0",
         "B Spesial 3": "0",
         "Total K+B": "19000",
-        "Pencairan Awal": "0",
-        "Pencairan Baru": "0",
-        "Tgl Pencairan": "-",
-        "Total Pencairan": "0",
+        "W Awal": "0",
+        "W Baru": "0",
+        "Tanggal W ": "-",
+        "Total W": "0",
         "B Tambahan 1": "0",
         "B Tambahan 2": "0",
         "B Tambahan 3": "0"
@@ -198,6 +198,7 @@
           <div <b>K: KOMISI</b></div>
           <div <b>B: BONUS</b></div>
           <div <b>G: GENERASI</b></div>
+          <div <b>W: WITHRAW (PENARIKAN)</b></div>
           <table>${filteredData}</table>
         `;
         resultContainer.style.display = "block";
