--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           <div class="center-text"><b>UNTUK MENGAKSES DETAIL INFORMASI KLIK MEMBER AREA</b></div>
           <div class="center-button">
           <a href="https://SAFF35.github.io/MEMBER" class="button">👉  MEMBER AREA</a></div>
-    
+          <div <b><p></p></b></div>
           <div <b>KETERANGAN:</b></div>
           <div <b>K: KOMISI</b></div>
           <div <b>B: BONUS</b></div>
