--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
 
   <script>
     const dataAnggota = {
-      "HYT001": {
-        "Kode ID": "HYT001",
-        "Password": "sukses001",
+      "SATU001": {
+        "Kode ID": "SATU001",
+        "Password": "Sukses001",
         "Tgl Bergabung": "45629",
         "Nama": "Hayat",
         "Sponsor": "AFS",
@@ -166,14 +166,66 @@
         "B Spesial 2": "0",
         "B Spesial 3": "0",
         "Total K+B": "19000",
-        "W Awal": "0",
+        "W Dulu": "0",
         "W Baru": "0",
         "Tanggal W ": "-",
         "Total W": "0",
         "B Tambahan 1": "0",
         "B Tambahan 2": "0",
         "B Tambahan 3": "0"
-      }
+      },
+      "DUA002": {
+        "Kode ID": "DUA002",
+        "Password": "Sukses002",
+        "Tgl Bergabung": "45629",
+        "Nama": "Hayat",
+        "Sponsor": "AFS",
+        "WA Sponsor": "089522704503",
+        "Mitra G1": "1",
+        "Poin G1": "10",
+        "Komisi G1": "10000",
+        "Mitra G2-10": "9",
+        "Poin G2": "90",
+        "Komisi G2-10": "9000",
+        "Jumlah K": "19000",
+        "B Spesial 1": "0",
+        "B Spesial 2": "0",
+        "B Spesial 3": "0",
+        "Total K+B": "19000",
+        "W Dulu": "0",
+        "W Baru": "0",
+        "Tanggal W ": "-",
+        "Total W": "0",
+        "B Tambahan 1": "0",
+        "B Tambahan 2": "0",
+        "B Tambahan 3": "0"
+      },
+      "TIGA003": {
+        "Kode ID": "TIGA003",
+        "Password": "Sukses003",
+        "Tgl Bergabung": "45629",
+        "Nama": "Hayat",
+        "Sponsor": "AFS",
+        "WA Sponsor": "089522704503",
+        "Mitra G1": "1",
+        "Poin G1": "10",
+        "Komisi G1": "10000",
+        "Mitra G2-10": "9",
+        "Poin G2": "90",
+        "Komisi G2-10": "9000",
+        "Jumlah K": "19000",
+        "B Spesial 1": "0",
+        "B Spesial 2": "0",
+        "B Spesial 3": "0",
+        "Total K+B": "19000",
+        "W Dulu": "0",
+        "W Baru": "0",
+        "Tanggal W ": "-",
+        "Total W": "0",
+        "B Tambahan 1": "0",
+        "B Tambahan 2": "0",
+        "B Tambahan 3": "0"
+      },
     };
 
     function cariData() {
